syntax="proto3";

package ping.v1;

message PingRequest {
}

message PingResponse {
  string message = 1;
}

service PingService {
  rpc Ping(PingRequest) returns (PingResponse);
}
